Shtova elemente te reja ne homepage dhe ndryshime tek loginform.html dhe script.js

--- a/loginform.html
+++ b/loginform.html
@@ -34,8 +34,10 @@
 
         <button type="submit" class="btn">Kyçu</button>
 
-        <div class="register-link"><p>Nuk keni llogari? 
-            <a href="#">Regjistrohu</a></p>
+        <div class="register-link">
+            <p>Nuk keni një llogari ekzistuese? 
+                <a href="#" id="registerLink">Regjistrohu</a>
+            </p>
         </div>
 
         
