Ndryshime te reja ne homepage

--- a/faqja1.html
+++ b/faqja1.html
@@ -34,6 +34,7 @@
 
 
     <main>
+      <div class="slogan-quote">
         <div class="slogan">
           <p class="paragrafi1">PUNË QË TË PËRSHTATET,<br><span style="font-weight: bold; color:#6f1d1b ;">MUNDESI QË RRIT.</span></p>
         </div>
@@ -43,6 +44,7 @@
             Shfleto oferta, <strong>krijo</strong> profilin tënd profesional dhe <strong>apliko</strong> me një klikim! </p>
             
         </div>
+      </div>
 
 
         <div class="search-box">
