Korrigjime ne about page

--- a/about.html
+++ b/about.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   
     <div>
         <head>
             <h1>About us</h1>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#home-section">Home</a></li>
+                    <li><a href="#about-section">About</a></li>
+                    <li><a href="#contact-section">Contact</a></li>
                 </ul>
             </nav>
         </head>
@@ -24,7 +25,7 @@
 
     <div>
         <main>
-            <section class="about-section">
+            <section class="about-section" class="about-wrapper">
                 <h2>Historiku Yne</h2>
                 <p>Ky aplikacion eshte zhvilluar me qellim te permiresimit te qasjes ne mundesite per punesim, duke ofruar nje platforme te besueshme qe lidh punekerkuesit me punedhenesit. Ai mundeson informim te sakte dhe te perditesuar mbi pozitat e hapura, mbeshtet zhvillimin profesional te perdoruesve dhe lehteson procesin e aplikimit per pune ne menyre efikase dhe transparente.</p>
             </section>
